objects/clm__MobileCustomization__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CT CLM: Status colors, recordtype icons on mobile devices</description>
    <fields>
        <fullName>clm__Colors__c</fullName>
        <label>Colors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__CriteriaField__c</fullName>
        <label>Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__OrgProfileId__c</fullName>
        <label>Org ID/Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mobile Customization</label>
</CustomObject>